Fix white-space: nowrap

--- a/lmfdb/templates/style.css
+++ b/lmfdb/templates/style.css
@@ -526,7 +526,7 @@ body.intro #sidebar a.intro { background: {{ color.sidebar_bkg_highlight }}; }
 
 .code, .prompt {
     font-family: monospace;
-    white-space: nowrap;
+    white-space: preserve nowrap;
 }
 
 .code {
